<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/menu_group_log">
        <menu>
            <item
                android:id="@+id/nav_log_quick"
                android:title="@string/action_log_short" />
            <item
                android:id="@+id/nav_log_common"
                android:title="@string/action_log_common" />
            <item
                android:id="@+id/nav_log_thread"
                android:title="@string/action_log_thread" />
            <item
                android:id="@+id/nav_log_arrays"
                android:title="@string/action_log_arrays" />
            <item
                android:id="@+id/nav_log_xml_hex"
                android:title="@string/action_log_xml_hex" />
            <item
                android:id="@+id/nav_log_objects"
                android:title="@string/action_log_objects" />
        </menu>
    </item>

    <item android:title="@string/menu_group_long_log">
        <menu>
            <item
                android:id="@+id/nav_log_long_common"
                android:title="@string/action_log_long_common" />
            <item
                android:id="@+id/nav_log_long_thread"
                android:title="@string/action_log_long_thread" />
            <item
                android:id="@+id/nav_log_long_arrays"
                android:title="@string/action_log_long_arrays" />
            <item
                android:id="@+id/nav_log_long_xml_hex"
                android:title="@string/action_log_long_xml_hex" />
        </menu>
    </item>

    <item android:title="@string/menu_group_components_log">
        <menu>
            <item
                android:id="@+id/nav_log_component_activity"
                android:title="@string/action_log_components_activity" />
            <item
                android:id="@+id/nav_log_component_fragment"
                android:title="@string/action_log_components_fragment" />
        </menu>
    </item>

</menu>